--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,22 +3,22 @@
 \chapter{Discussion}\label{discussion}
 
 \section{Test results}
-The GPS manipulation test as described in chapter \ref{gps_manipulation} demonstrated the ability to quickly identify a GPS disturbance and also demonstrated the ability to protect the atomic clock by disabling the disciplining. The system did however fail to steer the atomic clock. When we attempted to reset and debug the system, we encountered a bug in the clock model as well. The bug affected the way the clock model initializes from the configuration file which meant that the model would need at least 48 hours to rebuild. This is probably just a minor bug but because of the time constraint, we where forced to seize testing. 
+The GPS manipulation test as described in chapter \ref{gps_manipulation} demonstrated the ability to quickly identify a GPS disturbance and also demonstrated the ability to protect the atomic clock by disabling the disciplining. The system did, however, fail to steer the atomic clock. When we attempted to reset and debug the system, we encountered a bug in the clock model as well. The bug affected the way the clock model initializes from the configuration file, which meant that the model would need at least 48 hours to rebuild. This is probably just a minor bug but because of the time constraint, we where forced to seize testing. 
 
 \section{Sensor server performance}
-During the GPS manipulation tests as described under chapter \ref{gps_manipulation}, the sensor server part of the atomic clock controller worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with low latency. The system would probably react even faster if it received data from the atomic clock and GPS receivers at a higher frequency. The communication with the atomic clock also worked flawless, providing data for logging and the model as expected.
+During the GPS manipulation tests as described in chapter \ref{gps_manipulation}, the sensor server part of the atomic clock controller worked perfectly. The system was stable and performed as designed over longer periods of time (over 4 days). The system logged data reliably and without fault, accepted connections and was responsive at all times tested. There were no memory leaks or segmentation faults and the system facilitated the detection of our GPS manipulation attempt with low latency. The system would probably react even faster if it received data from the atomic clock and GPS receivers at a higher frequency. The communication with the atomic clock also worked flawlessly, providing data for logging and the model as expected.
 
 \section{Shortcomings in current implementation}
 This section is used to discuss some of the shortcomings in the current version of the atomic clock controller and sensor server architecture. Some functions were never implemented and others were not finished in time.
 
 \subsection{Resizing shared memory segments}\label{resizing_shared}
-Ideally the shared memory segments containing the client list should be resizeable and its size should depend on the number of connected clients. This proved difficult and I was not able to implement it. M. Kerrisk explains in his book "The Linux Programming Interface" \cite{kerrisk2010linux} that most UNIX implementations does not support resizing of a memory map like the shared memory segments used in the sensor server implementation. There is however a non-portable and Linux specific system call named \texttt{mremap()} that can be used on Linux systems for this purpose. Unfortunately the address returned by \texttt{mremap()} might be different from the old address to the shared memory segment. This would mean that pointer inside the shared segment might no longer be valid after a resize operation has been done. A way to avoid this problem caused by the remapping would be to use offsets instead of pointers when referring to addresses in the mapped region. While troubleshooting problems I had using \texttt{mremap()}, I stumbled upon a bug report in the the Kernel Bug Tracker \cite{BUG_TRACK} reported by someone with similar issues as I was having. This indicated that the trouble I was having might be because of a bug in the Linux kernel. I have yet to confirm this but it did convince me to leave the implementation with its shortcomings rather than potentially wasting my time on something way out of my reach. The waste of memory would never by substantial anyway considering that the size of the \texttt{client\_table\_entry} struct is a modest 4664 bytes. 
+Ideally the shared memory segments containing the client list should be resizeable and its size should depend on the number of connected clients. This proved difficult and I was not able to implement it. M. Kerrisk explains in his book "The Linux Programming Interface" \cite{kerrisk2010linux} that most UNIX implementations do not support resizing of a memory map like the shared memory segments used in the sensor server implementation. There is however a non-portable and Linux-specific system call named \texttt{mremap()} that can be used on Linux systems for this purpose. Unfortunately the address returned by \texttt{mremap()} might be different from the old address to the shared memory segment. This would mean that a pointer inside the shared segment might no longer be valid after a resize operation has been performed. A way to avoid this problem, caused by the remapping would be to use offsets instead of pointers when referring to addresses in the mapped region. While troubleshooting problems I had using \texttt{mremap()}, I stumbled upon a bug report in the the Kernel Bug Tracker \cite{BUG_TRACK} reported by someone with similar issues as I was having. This indicates that the trouble I had, might have been because of a bug in the Linux kernel. I have yet to confirm this but it did convince me to leave the implementation with its shortcomings rather than potentially wasting my time on something way out of my reach. The waste of memory would never by substantial anyway considering that the size of the \texttt{client\_table\_entry} struct is a modest 4664 bytes. 
 
 \subsection{Atomic clock management}
-The sensor server should have used a separate process to handle the filters and communication with the atomic clock. This would free the processes handling the connections to clients from dealing with the filters and make the filter abstraction more complete. This would also make the clock model cleaner. The atomic clock model is already logically separated from the filters associated with it, but because of the way the code is organized the use of the model implies the use of the filter. The atomic clock controller should still communicate with the atomic clock on its own like it does today, retrieving telemetry data, but the aforementioned process could keep track of the atomic clock's discipline status, steering and other functionality thus creating a more generic way for the system to communicate with the atomic clock. The GPS based filter could greatly benefit from this approach as it today is not currently doing anything but log occurrences where they were triggered. 
+The sensor server should have used a separate process to handle the filters and communication with the atomic clock. This would free the processes handling the connections to clients from dealing with the filters, and make the filter abstraction more complete. This would also make the clock model cleaner. The atomic clock model is already logically separated from the filters associated with it, but because of the way the code is organized the use of the model implies the use of the filter. The atomic clock controller should still communicate with the atomic clock on its own like it does today, retrieving telemetry data, but the aforementioned process could keep track of the atomic clock's discipline status, steering and other functionality, thus creating a more generic way for the system to communicate with the atomic clock. The GPS based filter could greatly benefit from this approach because they today do not do anything but log occurrences where they were triggered. 
 
 \subsection{External MJD calculation}
-Modified Julian Day (MJD) is a way to express both date and time as a single number. It's convenient when doing calculations with dates, for example: the difference between the MJD for one day and the next, is exactly 1\footnote{For example, the MJD for 24/10-2016 00:00 is 57685.0 and the MJD for 25/10-2016 00:00 is 57685.0. 12'o clock at the 25/10 would be 57658.5}. Modified Julian Date is heavily relied on by the clock model (see \ref{clock_model_harald} for more about the clock model). During testing a python script (see \ref{get_mjd} for more about this script) was used to calculate MJD. This script was scheduled to be replaced by a module written in C, but was left in use because of time constraints. The script is called upon by using \texttt{popen()} which in turn calls fork() to run the script. The clock model is updated every second which means that this script is also invoked every second. This is of course  counterintuitive considering that one of our goals for the software was to focus on efficiency.
+Modified Julian Day (MJD) is a way to express both date and time as a single number. It's convenient when doing calculations with dates, for example: the difference between the MJD for one day and the next, is exactly 1\footnote{For example, the MJD for 24/10-2016 00:00 is 57685.0 and the MJD for 25/10-2016 00:00 is 57685.0. 12'o clock at the 25/10 would be 57658.5}. Modified Julian Date relies heavily on by the clock model (see \ref{clock_model_harald} for more about the clock model). During testing a python script (see \ref{get_mjd} for more about this script) was used to calculate MJD. This script was scheduled to be replaced by a module written in C, but was left in use because of time constraints. The script is called upon by using \texttt{popen()} which in turn calls \texttt{fork()} to run the script. The clock model is updated every second which means that this script is also invoked every second. This is of course counterintuitive considering that one of our goals for the software was to focus on efficiency.
 
 \subsection{External Atomic clock communication}
 For some reason, it proved to be a significant challenge to implement a solution in C to configure, read and write from the atomic clock. The best solution did not even provide a reliable means of communicating with the atomic clock even though communication with the GPS receivers which in theory should have been exactly the same, was no problem. Once time got tight, I made the decision to drop the development of the atomic clock serial communication module written in C, and decided to use \texttt{query\_csac.py} by invoking with \texttt{popen()}. 
